--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Nu kan du betjene apparatet fra din mobilapp. Husk at parre apparatet først.",
     "hi_variable_fan_failure_status": "Fanen af (000)",
     "scan_device_code_tips_title": "Koden kunne ikke genkendes. Scan den korrekte enhedskode.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Manuel tørring",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Drej knappen for at flytte til \"Tilføj enhed\", og klik på \"Enter\".",
     "how_data_is_calculate_key": "Hvordan data beregnes",
-    "energy_select_device_ktip_key": "Bemærk, at du kun kan starte ECO-tilstand på enheder, der er i drift."
+    "energy_select_device_ktip_key": "Bemærk, at du kun kan starte ECO-tilstand på enheder, der er i drift.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## enheder kører ECOmode"
 }
