--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -1769,7 +1769,7 @@
     "dry_laundry": "",
     "energy": "에너지",
     "enter": "",
-    "drying": "",
+    "drying": "수동 건조",
     "device_is_standby": "장치가 꺼져 있어서 제어할 수 없습니다.",
     "favourite_program_name": "",
     "please_select_delete_data": "",
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "이제 모바일 앱에서 작동할 수 있습니다.먼저 기기를 페어링하는 것을 잊지 마세요.",
     "hi_variable_fan_failure_status": "(000)용 팬",
     "scan_device_code_tips_title": "코드를 인식할 수 없습니다. 올바른 장치 코드를 스캔하십시오.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "수동 건조",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "\"장치 추가\"로 이동하려면 \"입력\"을 클릭하십시오.",
     "how_data_is_calculate_key": "데이터가 어떻게 계산되는지",
-    "energy_select_device_ktip_key": "장치가 작동 중일 때만 ECO 모드를 시작할 수 있습니다."
+    "energy_select_device_ktip_key": "장치가 작동 중일 때만 ECO 모드를 시작할 수 있습니다.",
+    "CL_SM_CM_devices_are_running_eco_mode": "##개의 기기가 ECOmode를 실행 중입니다."
 }
