--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -1769,7 +1769,7 @@
     "dry_laundry": "",
     "energy": "tenaga",
     "enter": "",
-    "drying": "",
+    "drying": "Kering manual",
     "device_is_standby": "Peranti ini dimatikan dan tidak boleh dikawal.",
     "favourite_program_name": "",
     "please_select_delete_data": "",
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Kini anda boleh beroperasi daripada apl mudah alih anda. Ingat untuk memasangkan perkakas anda dahulu.",
     "hi_variable_fan_failure_status": "Fan untuk (000)",
     "scan_device_code_tips_title": "Kod tidak dapat dikenali. Imbas kod peranti yang betul.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Kering manual",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Hidupkan pengetahuan untuk beralih ke \"Tambah peranti\" dan klik pada \"Enter\".",
     "how_data_is_calculate_key": "Bagaimana data dikira",
-    "energy_select_device_ktip_key": "Sila ambil perhatian bahawa anda hanya boleh memulakan mod ECO pada peranti yang beroperasi."
+    "energy_select_device_ktip_key": "Sila ambil perhatian bahawa anda hanya boleh memulakan mod ECO pada peranti yang beroperasi.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## peranti menjalankan ECOmode"
 }
