--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "قم بتحويل المعرفة للانتقال إلى \"إضافة جهاز\" وانقر على \"أدخل\".",
     "how_data_is_calculate_key": "كيف يتم حساب البيانات",
-    "energy_select_device_ktip_key": "يرجى ملاحظة أنه يمكنك بدء وضع ECO فقط على الأجهزة التي تعمل."
+    "energy_select_device_ktip_key": "يرجى ملاحظة أنه يمكنك بدء وضع ECO فقط على الأجهزة التي تعمل.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## الأجهزة تعمل بنظام ECOmode"
 }
