--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Jetzt können Sie von Ihrer mobilen App aus arbeiten. Denken Sie daran, Ihr Gerät zuerst zu koppeln.",
     "hi_variable_fan_failure_status": "Der Ventilator für (000)",
     "scan_device_code_tips_title": "Code konnte nicht erkannt werden. Scannen Sie den richtigen Gerätecode.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Manuell trocken",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Drehen Sie den Knopf, um zu „Gerät hinzufügen“ zu gelangen und klicken Sie auf „Eingeben“.",
     "how_data_is_calculate_key": "Wie Daten berechnet werden",
-    "energy_select_device_ktip_key": "Bitte beachten Sie, dass Sie den ECO-Modus nur bei Geräten im Betrieb starten können."
+    "energy_select_device_ktip_key": "Bitte beachten Sie, dass Sie den ECO-Modus nur bei Geräten im Betrieb starten können.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## Geräte laufen im ECO-Modus"
 }
