--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Τώρα μπορείτε να λειτουργήσετε από την εφαρμογή του κινητού σας. Θυμηθείτε να συνδέσετε πρώτα τη συσκευή σας.",
     "hi_variable_fan_failure_status": "Ο ανεμιστήρας για (000)",
     "scan_device_code_tips_title": "Ο κωδικός δεν αναγνωρίστηκε. Σαρώστε τον σωστό κωδικό συσκευής.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Χειροκίνητο στέγνωμα",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Γυρίστε τη γνώση για να μετακινηθείτε στην \"Προσθήκη συσκευής\" και κάντε κλικ στο \"Enter\".",
     "how_data_is_calculate_key": "Πώς υπολογίζονται τα δεδομένα",
-    "energy_select_device_ktip_key": "Παρακαλώ σημειώστε ότι μπορείτε να ξεκινήσετε τη λειτουργία ECO μόνο σε συσκευές που είναι σε λειτουργία."
+    "energy_select_device_ktip_key": "Παρακαλώ σημειώστε ότι μπορείτε να ξεκινήσετε τη λειτουργία ECO μόνο σε συσκευές που είναι σε λειτουργία.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## συσκευές εκτελούν ECOmode"
 }
