--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Siirry \"Lisää laite\" -kohtaan kääntämällä tietämystä ja napsauta \"Enter\".",
     "how_data_is_calculate_key": "Miten tiedot lasketaan",
-    "energy_select_device_ktip_key": "Huomaa, että voit käynnistää ECO-tilan vain toiminnassa olevissa laitteissa."
+    "energy_select_device_ktip_key": "Huomaa, että voit käynnistää ECO-tilan vain toiminnassa olevissa laitteissa.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## laitteet käyttävät ECOmodea"
 }
