--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -1769,7 +1769,7 @@
     "dry_laundry": "",
     "energy": "אנרגיה",
     "enter": "",
-    "drying": "",
+    "drying": "ייבוש ידני",
     "device_is_standby": "המכשיר כבוי ואין אפשרות לשלוט בו.",
     "favourite_program_name": "",
     "please_select_delete_data": "",
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "עכשיו אתה יכול לפעול מהאפליקציה שלך לנייד. זכרו לקשר תחילה את המכשיר.",
     "hi_variable_fan_failure_status": "המאוורר עבור (000)",
     "scan_device_code_tips_title": "לא ניתן לזהות את הקוד. סרוק את קוד המכשיר הנכון.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "ייבוש ידני",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "סובב את הידע כדי לעבור ל\"הוסף מכשיר\" ולחץ על \"Enter\".",
     "how_data_is_calculate_key": "כיצד הנתונים מחושבים",
-    "energy_select_device_ktip_key": "שים לב שניתן להפעיל את מצב ECO רק במכשירים שפועלים."
+    "energy_select_device_ktip_key": "שים לב שניתן להפעיל את מצב ECO רק במכשירים שפועלים.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## מכשירים פועלים ECOmode"
 }
