--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "これで、モバイルアプリから操作できるようになります。最初に電気器具をペアリングすることを忘れないでください。",
     "hi_variable_fan_failure_status": "(000)用扇風機",
     "scan_device_code_tips_title": "コードを認識できませんでした。 正しいデバイス コードをスキャンします。",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "マニュアルドライ",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "ノブを回して「デバイスの追加」に移動し、「Enter」をクリックします。",
     "how_data_is_calculate_key": "データはどのように計算されるか",
-    "energy_select_device_ktip_key": "稼働中のデバイスでのみECOモードを開始できますのでご注意ください。"
+    "energy_select_device_ktip_key": "稼働中のデバイスでのみECOモードを開始できますのでご注意ください。",
+    "CL_SM_CM_devices_are_running_eco_mode": "## 台のデバイスが ECOmode を実行しています"
 }
