--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Сега можете да работите од вашата мобилна апликација. Не заборавајте прво да го спарите вашиот апарат.",
     "hi_variable_fan_failure_status": "Обожавателот на (000)",
     "scan_device_code_tips_title": "Кодот не можеше да се препознае. Скенирајте го точниот код на уредот.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Рачно сушење",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Свртете го знаењето за да преминете во „Додај уред“ и кликнете на „Внеси“.",
     "how_data_is_calculate_key": "Како се пресметуваат податоците",
-    "energy_select_device_ktip_key": "Ве молиме имајте предвид дека можете да го стартувате ECO режимот само на уреди кои се во функција."
+    "energy_select_device_ktip_key": "Ве молиме имајте предвид дека можете да го стартувате ECO режимот само на уреди кои се во функција.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## уреди користат ECO-режим"
 }
