--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -2837,7 +2837,7 @@
     "asko_remote_2z": "Nå kan du betjene apparatet fra mobilappen din, men husk å parre apparatet først.",
     "hi_variable_fan_failure_status": "Fans av (000)",
     "scan_device_code_tips_title": "Koden kunne ikke gjenkjennes. Skann riktig enhetskode.",
-    "oven_atag_extras_drying": "",
+    "oven_atag_extras_drying": "Manuell tørking",
     "oven_atag_extras_drying_content": "",
     "oven_atag_extras_dehydrate_content": "",
     "oven_atag_extras_sterilise_bottles": "",
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Vri på knappen for å gå til \"Legg til enhet\" og klikk på \"Enter\".",
     "how_data_is_calculate_key": "Hvordan data beregnes",
-    "energy_select_device_ktip_key": "Vær oppmerksom på at du bare kan starte ECO-modus på enheter som er i drift."
+    "energy_select_device_ktip_key": "Vær oppmerksom på at du bare kan starte ECO-modus på enheter som er i drift.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## enheter kjører ECOmode"
 }
