--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Gire o conhecimento para ir para “Adicionar dispositivo” e clique em “Entrar”.",
     "how_data_is_calculate_key": "Como são calculados os dados",
-    "energy_select_device_ktip_key": "Por favor, tenha em atenção que só pode iniciar o modo ECO em dispositivos em funcionamento."
+    "energy_select_device_ktip_key": "Por favor, tenha em atenção que só pode iniciar o modo ECO em dispositivos em funcionamento.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## dispositivos estão executando o modo ECO"
 }
