--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Întoarceți cunoștințele pentru a trece la „Adăugați dispozitiv” și faceți clic pe „Enter”.",
     "how_data_is_calculate_key": "Cum sunt calculate datele",
-    "energy_select_device_ktip_key": "Vă rugăm să rețineți că puteți porni modul ECO doar pe dispozitivele în funcțiune."
+    "energy_select_device_ktip_key": "Vă rugăm să rețineți că puteți porni modul ECO doar pe dispozitivele în funcțiune.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## dispozitive rulează ECOmode"
 }
