--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Поверните ноу, чтобы перейти к «Добавить устройство» и нажмите «Ввод».",
     "how_data_is_calculate_key": "Как рассчитываются данные",
-    "energy_select_device_ktip_key": "Обратите внимание, что режим ECO можно запустить только на работающих устройствах."
+    "energy_select_device_ktip_key": "Обратите внимание, что режим ECO можно запустить только на работающих устройствах.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## устройств работают в режиме ECOmode"
 }
