--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -3941,7 +3941,8 @@
     "wm86_and_td76_ui2_p_step3": "",
     "wm86_and_td76_ui1_step1": "",
     "wm86_and_td76_ui1_cs_step2": "",
-    "wm86_and_td76_ui1_p_step2": "",
+    "wm86_and_td76_ui1_p_step2": "Obrnite gumb, da se premaknete na \"Dodaj napravo\" in kliknite \"Enter\".",
     "how_data_is_calculate_key": "Kako se podatki izračunajo",
-    "energy_select_device_ktip_key": "Prosimo, upoštevajte, da lahko način ECO zaženete samo na napravah, ki so v delovanju."
+    "energy_select_device_ktip_key": "Prosimo, upoštevajte, da lahko način ECO zaženete samo na napravah, ki so v delovanju.",
+    "CL_SM_CM_devices_are_running_eco_mode": "## naprave uporabljajo ECOmode"
 }
